# rust-book

./: .gitignore  README.md
.github/workflows/: fibonacci.yml  project.yml  rocket-rest.yml  rust-clippy.yml
date-times/: Cargo.toml
date-times/src/: main.rs
diesel-db/: .env  Cargo.toml  diesel.toml
diesel-db/migrations/2023-09-05-204717_user_migrations/: down.sql  up.sql
diesel-db/src/: main.rs  models.rs  schema.rs
fibonacci/src/: main.rs
http-calls/: Cargo.toml
http-calls/src/: main.rs
rocket-rest/: Cargo.toml  Dockerfile  docker-build.sh  docker-run.sh
rocket-rest/src/: main.rs
rocket-rest/src/controllers/: user_controller.rs
rocket-rest/src/users/: mod.rs  user_model.rs  user_service.rs
sqlx-example/: .env  Cargo.toml  README.md
sqlx-example/migrations/: 20231006153321_init.down.sql  20231006153321_init.up.sql
sqlx-example/src/: main.rs
